@@ -4,6 +4,12 @@ Changelog
 1.3.4 - Unreleased
 ------------------
 
+- Support resolveuid/UID references explicitely, by parsing and resolving
+  these ourselves instead of relying on a view or script (which doesn't work).
+  This fixes linkintegrity for sites with link-by-uid turned on.
+  This closes https://dev.plone.org/ticket/12104
+  [mj]
+
 1.3.3 - 2011-07-05
 ------------------
 
